--- a/css/styles.css
+++ b/css/styles.css
@@ -1,29 +1,58 @@
-:root{
+:root {
     --background: #F4EECB;
     --primary: #dea343;
     --secondary: #041B6C;
+    --text: #05011280;
 }
 
-*{
+[data-theme="dark"] {
+    --background: black;
+    --primary: #dea343;
+    --secondary: #ff0;
+    --text: white;
+    transition: .5s ease-in-out background, .5s ease-in-out color;
+}
+
+#acessibilidade input {
+    display: none;
+}
+
+#acessibilidade {
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+}
+
+#acessibilidade img {
+    width: 4rem;
+    aspect-ratio: 1/1;
+}
+
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-img{
+
+img {
     max-width: 100%;
 }
 
-h1{
+h1 {
     font-size: 1.5rem;
 }
 
-body{
+h2{
+    color: var(--secondary);
+}
+
+body {
     font-family: "Kufam", sans-serif;
     background-color: var(--background);
     color: #050112;
 }
 
-header{
+header {
     background-color: var(--primary);
     padding: 1rem 2.3rem;
     display: flex;
@@ -34,11 +63,11 @@ header{
 
 }
 
-#logo{
+#logo {
     height: 2rem;
 }
 
-#menu{
+#menu {
     width: 1.5rem;
     display: flex;
     flex-direction: column;
@@ -46,7 +75,7 @@ header{
 
 }
 
-#menulateral{
+#menulateral {
     background-color: var(--primary);
     color: black;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -61,68 +90,67 @@ header{
     transition: transform ease 0.40s;
 }
 
-#menulateral nav ul{
+#menulateral nav ul {
     list-style: none;
     display: flex;
     flex-direction: column;
 }
 
-#menulateral nav ul li+li{
+#menulateral nav ul li+li {
     border-top: solid black 1px;
 }
 
-#menulateral nav ul li{
+#menulateral nav ul li {
     padding: 1rem 0;
 }
 
-#menulateral.ativarMenu{
+#menulateral.ativarMenu {
     transform: translateX(0);
 }
 
-#menu div{
+#menu div {
     height: .2rem;
     background-color: var(--background);
 }
 
-main{
+main {
     margin: 1rem;
 }
 
-#anos{
+#anos {
     border-bottom: solid 2px var(--primary);
-    margin-top: 3rem;
 }
 
-#anos ul{
+#anos ul {
     list-style: none;
     display: flex;
     font-size: 1.25rem;
     gap: 1rem;
-    color: #05011280;
+    color: var(--text);
 }
 
-#anos ul li a{
+#anos ul li a {
     display: block;
-    padding: 0.25rem 1.125rem ;
+    padding: 0.25rem 1.125rem;
     border-radius: 10px 10px 0 0;
 }
 
-a{
+a {
     text-decoration: none;
     color: unset;
 }
 
-.ativo{
+.ativo {
     background-color: var(--primary);
     color: var(--secondary);
     font-weight: bold;
 }
 
-.semestres{
+.semestres {
     margin-top: 1.5rem;
 }
 
-.grid{
+.grid {
     margin-top: 1rem;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -130,38 +158,38 @@ a{
     row-gap: 1.6rem;
 }
 
-.grid h2{
+.grid h2 {
     font-size: 1rem;
     font-weight: 500;
 }
 
-.grid p{
+.grid p {
     font-size: .8rem;
     color: #05011280;
 }
 
-.grid img{
+.grid img {
     border-radius: 10px;
     height: 5rem;
     object-fit: cover;
     width: 100%
 }
 
-.cardtext{
+.cardtext {
     padding: 0.6rem;
     background-color: var(--primary);
 }
 
-.grid a{
+.grid a {
     border-radius: 10px;
     box-shadow: 0px 12px 42px -4px rgba(24, 39, 75, 0.12), 0px 8px 18px -6px rgba(24, 39, 75, 0.12);
 }
 
-.semestres+.semestres{
+.semestres+.semestres {
     margin-top: 4.5rem;
 }
 
-#redes{
+#redes {
     height: 2.8rem;
     background-color: var(--primary);
     display: flex;
@@ -170,28 +198,28 @@ a{
     justify-content: center;
 }
 
-footer{
+footer {
     background-color: var(--secondary);
     color: var(--background);
     padding-bottom: .5rem;
 }
 
-#contato{
+#contato {
     margin-top: 1.1rem;
     padding: 1rem;
 }
 
-#localizacao{
+#localizacao {
     padding: 1rem;
     text-align: right;
 }
 
-h4{
+h4 {
     text-align: center;
     margin-top: 1.5rem;
 }
 
-#materialH2{
+#materialH2 {
     text-align: center;
     color: var(--secondary);
     font-size: 1.25rem;
@@ -199,7 +227,7 @@ h4{
     text-decoration: underline;
 }
 
-#material{
+#material {
     border: solid var(--primary);
     text-align: center;
     border-width: 1.5rem;
@@ -208,7 +236,7 @@ h4{
     background-color: white;
 }
 
-#materiais{
+#materiais {
     display: flex;
     align-items: end;
     justify-content: center;
@@ -217,19 +245,19 @@ h4{
     margin: 2rem 0;
 }
 
-.materialcard{
+.materialcard {
     border: solid var(--primary);
     border-width: 1.5rem .5rem .5rem .5rem;
     padding: 2.5rem 2rem;
     border-radius: 5px;
 }
 
-.headerCard{
+.headerCard {
     text-align: center;
     font-size: .9rem;
 
 }
 
-.contentCard{
+.contentCard {
     width: 30%;
 }
