--- a/css/styles.css
+++ b/css/styles.css
@@ -254,11 +254,16 @@ h4 {
 
 #material {
     border: solid var(--primary);
+    margin: 0 auto;
     text-align: center;
-    border-width: 1.5rem;
+    border-width: .5rem;
     box-shadow: 0px 12px 42px -4px rgba(24, 39, 75, 0.12), 0px 8px 18px -6px rgba(24, 39, 75, 0.12);
     border-radius: 10px;
     background-color: white;
+    position: relative;
+    padding-bottom: 87,5%; /* 16:9 */
+    padding-top: 25px;
+    height: 0;
 }
 
 #materiais {
@@ -275,6 +280,14 @@ h4 {
     border-width: 1.5rem .5rem .5rem .5rem;
     padding: 2.5rem 2rem;
     border-radius: 5px;
+}
+
+#material iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .headerCard {
@@ -502,12 +515,12 @@ h4 {
     }
 
     #material{
-        width: 70%;
         margin: 0 14rem;
         height: 35rem;
         display: flex;
         align-items: center;
         justify-content: center;
+        border-width: 1.5rem;
         
     }
 
